update the open group btn in groupinside page

--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -11,7 +11,7 @@
     <div class="groupViewSearchBar row">
         <!-- <form action="groupSearch.php" method="GET"> -->
         <input type="text" name="search_text" id="search_text" placeholder="來看看有哪些揪團" class="col col-md-5" />
-        <button type="button" id="groupSearch" class="groupSearch">
+        <button type="button" id="groupSearch" class="groupSearchOut">
             <!-- <img src="./images/iconSearch.png" /> -->
             搜尋
         </button>
