--- a/dev/groupView.html
+++ b/dev/groupView.html
@@ -34,14 +34,14 @@
 </style>
 
 <body>
-    @@include('./htmlTemplate/nav.html') @@include('./htmlTemplate/slider.html')
-    @@include('./htmlTemplate/mainGroupView.html') @@include('./htmlTemplate/footer.html')
-    <div id="setupGroup" class="lightBoxWall" style="overflow-y: scroll;">
+    @@include('./htmlTemplate/nav.html') 
+    @@include('./htmlTemplate/slider.html')
+    @@include('./htmlTemplate/mainGroupView.html') 
+    @@include('./htmlTemplate/footer.html')
+    <div id="setupGroup" class="lightBoxWall" style="z-index:10; overflow-y: scroll;">
         @@include('./htmlTemplate/setupGroup.html')
     </div>
-    <!-- <div id="partinGroup" class="lightBoxWall" >
-        @@include('./htmlTemplate/partinGroups.html')
-    </div> -->
+   
 </body>
 <script src="./js/carousel.js"></script>
 <!-- <script src="./js/GroupFilter.js"></script> -->
