--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -220,22 +220,22 @@
                     <tr>
                         <th>熱搜行程</th>
                     </tr>
-                    <tr>
-                        <td id="hotSche001" name="hotSche001">
+                    <tr >
+                        <td  id="hotSche001" name="hotSche001" onclick="openScheCardLightBox(this)" :data-id="hotSche001.Sche_Name">
                             <a><img :src="hotSche001.Sche_Img" alt="" />
                                 <p>{{hotSche001.Sche_Name}}</p>
                             </a>
                         </td>
                     </tr>
                     <tr>
-                        <td id="hotSche002" name="hotSche002">
+                        <td id="hotSche002" name="hotSche002" onclick="openScheCardLightBox(this)" :data-id="hotSche002.Sche_Name">
                             <a><img :src="hotSche002.Sche_Img" alt="" />
                                 <p>{{hotSche002.Sche_Name}}</p>
                             </a>
                         </td>
                     </tr>
                     <tr>
-                        <td id="hotSche003" name="hotSche003">
+                        <td id="hotSche003" name="hotSche003" onclick="openScheCardLightBox(this)" :data-id="hotSche003.Sche_Name">
                             <a><img :src="hotSche003.Sche_Img" alt="" />
                                 <p>{{hotSche003.Sche_Name}}</p>
                             </a>
