--- a/dev/htmlTemplate/homepageBody.html
+++ b/dev/htmlTemplate/homepageBody.html
@@ -37,6 +37,8 @@
                 data-1200="opacity:1;transform:translateX(0);"
                 data-2449="opacity:1;transform:translateX(0);"
                 data-2450="opacity:1;transform:translateX(54%);">
+                123
+                <img src="./images/homepageSecondSlide.png" alt="">
             </div>
 
             <div class="right-background-content" data-700="opacity:0;transform:translateY(110%);"
