--- a/dev/htmlTemplate/homepageBody.html
+++ b/dev/htmlTemplate/homepageBody.html
@@ -35,10 +35,9 @@
 
             <div class="right-background" data-550="opacity:0;transform:translateX(80%);"
                 data-1200="opacity:1;transform:translateX(0);"
-                data-2449="opacity:1;transform:translateX(0);"
-                data-2450="opacity:1;transform:translateX(54%);">
-                123
-                <img src="./images/homepageSecondSlide.png" alt="">
+                data-1800="opacity:1;transform:translateX(0);"
+                data-2450="opacity:0;transform:translateX(54%);">
+                <img src="./images/secondSlide.png" alt="">
             </div>
 
             <div class="right-background-content" data-700="opacity:0;transform:translateY(110%);"
@@ -152,7 +151,7 @@
     </div>
     <div class="secondScreen576">
         <p>輕鬆的操作方式～<br>建立一個屬於自己的行程吧！</p>
-        <!-- <div>圖片加這裡～</div> -->
+        <img src="./images/secondSlide576.png" alt=""><br>
         <button class="btnLarge" onclick="location.href='./plan.html';">馬上去！</button>
     </div>
     <div id="smallhomePageGroup" class="thirdScreen576">
