--- a/dev/htmlTemplate/mainBlogView.html
+++ b/dev/htmlTemplate/mainBlogView.html
@@ -46,8 +46,10 @@
                                 <p>發佈日期：{{blogCard.Blog_Date}}</p>
                                 <div>
                                     <p>人氣{{blogCard.Blog_Views}}</p>
-                                    <a href="">
-                                        <img src="./images/heart.png" alt="">
+                                    <a >
+                                        <img :data-blogno="blogCard.Blog_NO" onclick="checkKeepBlog(this);" id="LikeBtn" src="./images/heart.png" >
+                                        <img style="display: none;" id="LikeBtn_r" src="./images/heart_r.png" >
+
                                     </a>
                                 </div>
                             </div>
