--- a/dev/htmlTemplate/mainBlogView.html
+++ b/dev/htmlTemplate/mainBlogView.html
@@ -28,12 +28,14 @@
         <div class="mainBlogCardsArea">
             <!-- 卡片區塊start -->
             <div id="blogCardsAll">
-                <div v-for="blogCard in blogCardsAlls" class="card cardOriginalTem cardBlog cardBlogOnBlogView
-                d-block" style="width: 18rem;">
-                    <a href="./blogInside.html">
+                <div v-for="blogCard in blogCardsAlls" class="card
+                    cardOriginalTem cardBlog cardBlogOnBlogView
+                    d-block" style="width: 18rem;">
+                    <a :href="'blogInside.php?Blog_NO='
+                        + blogCard.Blog_NO">
                         <img :src="blogCard.Blog_PicURL" class="card-img-top" alt="...">
                         <div class="card-body card-img-overlay
-                        cardImgOverlayWebUse">
+                            cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">遊記</h5>
                             <div class="mask">
                                 <p class="card-text cardTextWebUse">{{blogCard.Blog_Name}}</p>
@@ -46,9 +48,9 @@
                                 <p>發佈日期：{{blogCard.Blog_Date}}</p>
                                 <div>
                                     <p>人氣{{blogCard.Blog_Views}}</p>
-                                    <a >
-                                        <img :data-blogno="blogCard.Blog_NO" onclick="checkKeepBlog(this);" id="LikeBtn" src="./images/heart.png" >
-                                        <img style="display: none;" id="LikeBtn_r" src="./images/heart_r.png" >
+                                    <a>
+                                        <img :data-blogno="blogCard.Blog_NO" onclick="checkKeepBlog(this);" id="LikeBtn" src="./images/heart.png">
+                                        <img style="display: none;" id="LikeBtn_r" src="./images/heart_r.png">
 
                                     </a>
                                 </div>
