--- a/dev/htmlTemplate/mainBlogView.html
+++ b/dev/htmlTemplate/mainBlogView.html
@@ -50,7 +50,7 @@
                                     <p>人氣{{blogCard.Blog_Views}}</p>
                                     <a>
                                         <img :data-blogno="blogCard.Blog_NO" onclick="checkKeepBlog(this);" id="LikeBtn" src="./images/heart.png">
-                                        <img style="display: none;" id="LikeBtn_r" src="./images/heart_r.png">
+                                        <img style="display: none;" id="LikeBtn_r" src="./images/heart_r.png" onclick="heartChange()">
 
                                     </a>
                                 </div>
