--- a/dev/plan.html
+++ b/dev/plan.html
@@ -189,10 +189,10 @@
       /*# sourceMappingURL=style.css.map */
       /* nav */
 
-      .nav-linkplan::after{
+      .nav-linkplan::after {
         width: 100% !important;
       }
-      .nav-linkMember:hover{
+      .nav-linkMember:hover {
         cursor: pointer;
       }
 
@@ -982,18 +982,38 @@
             });
           },
           getSearchedKeepAttractionsFromPHP() {
-            // check if logged, if true, get and input MemNO:
-            if (true) {
-              this.MemNO = 1;
-            }
-            $.get(`searchKeepAttrac.php?MemNO=${this.MemNO}`).then((data) => {
-              if (JSON.parse(data) == 0) {
-                alert("尚無收藏任何景點");
+            $.get("getMemberInfo.php").then((data) => {
+              let memNOFromPHP = JSON.parse(data).Mem_NO;
+              console.log(`memno:${memNOFromPHP}`);
+              if (data == "{}") {
+                alert("請先登入會員");
               } else {
-                this.searchedAttractions = JSON.parse(data);
-                console.log(this.searchedAttractions);
+                this.MemNO = memNOFromPHP;
+                $.get(`searchKeepAttrac.php?MemNO=${this.MemNO}`).then(
+                  (data) => {
+                    if (JSON.parse(data) == 0) {
+                      alert("尚無收藏任何景點");
+                    } else {
+                      this.searchedAttractions = JSON.parse(data);
+                      console.log(this.searchedAttractions);
+                    }
+                  }
+                );
               }
             });
+
+            // check if logged, if true, get and input MemNO:
+            // if (true) {
+            //   this.MemNO = 1;
+            // }
+            // $.get(`searchKeepAttrac.php?MemNO=${this.MemNO}`).then((data) => {
+            //   if (JSON.parse(data) == 0) {
+            //     alert("尚無收藏任何景點");
+            //   } else {
+            //     this.searchedAttractions = JSON.parse(data);
+            //     console.log(this.searchedAttractions);
+            //   }
+            // });
           },
           getSearchedRegionAttractionsFromPHP(x, y) {
             // console.log(typeof x);
