increase close button area in attrac direction

--- a/dev/plan.html
+++ b/dev/plan.html
@@ -1287,8 +1287,8 @@
         props: ["label2"],
         template: `
                           <div class="container my-3 py-3 pr-0 rounded shadow">
-                            <button @click="sendClosedAttractionToAttractionList" type="button"  class="close"   aria-label="Close" style="margin-top:-17px;margin-right:3px;">
-                              <span aria-hidden="true" style="font-size:1rem">&times;</span>
+                            <button @click="sendClosedAttractionToAttractionList" type="button"  class="close"   aria-label="Close" style="margin-top:-10px;margin-right:3px;">
+                              <span class="p-2" aria-hidden="true" style="font-size:1rem">&times;</span>
                             </button>
                             <div class="row">
                               <div class="left px-0 overflow-hidden col-4" style="height:100px">
