修復橫向捲軸bug

--- a/dev/groupView.html
+++ b/dev/groupView.html
@@ -27,9 +27,11 @@
 
     body {
         -ms-overflow-style: none;
-        height: 100%;
-        width: calc(100vw + 18px);
+        /* height: 100%; */
+        /* width: calc(100vw + 18px); */
         overflow: auto;
+        /* overflow-x: hidden; */
+        /* width: 100vw; */
     }
 </style>
 
