--- a/dev/htmlTemplate/homepageBody.html
+++ b/dev/htmlTemplate/homepageBody.html
@@ -36,7 +36,8 @@
             <div class="right-background" data-550="opacity:0;transform:translateX(80%);"
                 data-1200="opacity:1;transform:translateX(0);"
                 data-1800="opacity:1;transform:translateX(0);"
-                data-2450="opacity:0;transform:translateX(54%);">
+                data-2300="opacity:0;transform:translateX(0%);"
+                data-2450="opacity:0;transform:translateX(100%);">
                 <img src="./images/secondSlide.png" alt="">
             </div>
 
