--- a/dev/htmlTemplate/mainBlogView.html
+++ b/dev/htmlTemplate/mainBlogView.html
@@ -17,12 +17,14 @@
     </div>
     <hr>
     <div class="chooseBlock row">
-        <button class="blogFBtn" onclick="sortByLatest()">
-            最新刊登 &darr;
-        </button>
-        <button class="blogFBtn blogFBtn3" onclick="SortByLike()">
-            最高評價 &darr;
-        </button>
+        <div class="blogBtn">
+            <button class="blogFBtn" onclick="sortByLatest()">
+                最新刊登 &darr;
+            </button>
+            <button class="blogFBtn blogFBtn3" onclick="SortByLike()">
+                最高評價 &darr;
+            </button>
+        </div>      
     </div>
     <div class="blogCardsBlockView">
         <div class="mainBlogCardsArea">
