--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -19,24 +19,17 @@
     </div>
     <hr />
     <div class="chooseBlock row">
-
-        <button class="groupFBtn " onclick="sortByLatest()">
-            最新刊登 &darr;
-        </button>
-        <button class="groupFBtn groupFBtn2" onclick="SortByLike()">
-            最高評價 &darr;
-        </button>
+        <div class="groupBtn">
+            <button class="groupFBtn " onclick="sortByLatest()">
+                最新刊登 &darr;
+            </button>
+            <button class="groupFBtn groupFBtn2" onclick="SortByLike()">
+                最高評價 &darr;
+            </button>
+        </div>
+        
 
         <!-- 手機版篩選器開始 -->
-        <div class="d-flex mobileFilter col-3 col-md-3 col-lg-1 d-none
-            d-sm-block d-md-none">
-            <!-- <div class="dropdown mr-1">
-                <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
-                    篩選
-                </button>
-            </div> -->
-        </div>
         <div class="checkBox4phone d-sm-block d-md-none col-12">
             <div>
                 <div>
