--- a/dev/htmlTemplate/nav.html
+++ b/dev/htmlTemplate/nav.html
@@ -41,11 +41,7 @@
         </div>
       </div>
       <a class="navSmallCenter" href="main.html"><img src="./images/logo.png" alt=""></a>
-      <div>
-        <!-- <a class="nav-link navSmallRight" style="text-decoration:none;" data-toggle="modal" data-target="#loginForm">登入</a>
-        <a class="nav-link navSmallRight1" id="qwer" style="text-decoration:none;" data-toggle="modal" data-target="#registerForm">註冊</a> -->
-      </div>
-      <!-- <a class="nav-link navSmallRight" style="text-decoration:none;" data-toggle="modal" data-target="#loginForm">登入</a> -->
+      <div></div>
     </div>
     <div class="container">
       <div class="modal fade" id="loginForm" role="dialog">
