--- a/dev/main.html
+++ b/dev/main.html
@@ -19,8 +19,9 @@
   body {
     -ms-overflow-style: none;
     height: 100%;
-	width: calc(100vw + 18px);
-	overflow: auto;
+	  /* width: calc(100vw + 18px); */
+    overflow: auto;
+    /* overflow-x: hidden; */
   }
 </style>
 <body>
