橫向捲軸修復ver.2

--- a/dev/blogView.html
+++ b/dev/blogView.html
@@ -20,7 +20,7 @@
     body {
         -ms-overflow-style: none;
         height: 100%;
-        width: calc(100vw + 18px);
+        /* width: calc(100vw + 18px); */
         overflow: auto;
     }
 </style>
