--- a/dev/writeBlog.html
+++ b/dev/writeBlog.html
@@ -8,6 +8,9 @@
       overflow: -moz-hidden-unscrollable;
       height: 100%;
     }
+        .nav-linkblogView::after {
+        width: 100% !important;
+    }
   
     body::-webkit-scrollbar {
       display: none;
@@ -16,7 +19,7 @@
     body {
       -ms-overflow-style: none;
       height: 100%;
-      width: calc(100vw + 18px);
+      /* width: calc(100vw + 18px); */
       overflow: auto;
     }
   </style>
