--- a/dev/htmlTemplate/mainBlogView.html
+++ b/dev/htmlTemplate/mainBlogView.html
@@ -1,13 +1,12 @@
 <div class="container px-lg-0">
 
-    <a href="./writeBlog.html">
-        <!-- <img src="./images/writeBlog.png" alt="" class="d-md-block" /> -->
+    <!-- <a href="./writeBlog.html">
         <button class="addBlogBTN">
             <p>
                 撰寫遊記
             </p>
         </button>
-    </a>
+    </a> -->
     <!-- search bar -->
     <div class="blogViewSearchBar row">
         <input type="text" name="search_text" id="search_text" placeholder="來看看有哪些遊記" class="col col-md-5" />
